further follow up changes from integrating the mergeutils branch